[package]
name = "canopus"
version = "0.1.0"
edition = "2021"
description = "A bLIP-17 Hosted Channels HOST plugin for Core Lightning"
license = "CC0-1.0"

[[bin]]
name = "canopus"
path = "src/main.rs"

[lib]
name = "canopus"
path = "src/lib.rs"

[dependencies]
cln-plugin = "0.7"
cln-rpc = "0.7"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
secp256k1 = { version = "0.29", features = ["global-context", "rand", "serde", "hashes"] }
rand = "0.8"
sha2 = "0.10"
hmac = "0.12"
hkdf = "0.12"
chacha20 = "0.9"
hex = "0.4"
zeroize = { version = "1", features = ["zeroize_derive"] }
thiserror = "1"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
async-trait = "0.1"
bytes = "1"
once_cell = "1"
regex = "1"
url = "2"
bitcoin = "0.32"
lightning-invoice = "0.34"
bip39 = "2"
argon2 = "0.5"
chacha20poly1305 = "0.10"

[dev-dependencies]
tempfile = "3"
tokio = { version = "1", features = ["full", "test-util"] }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
